# signalmesh

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: EVALUATION_LOG.md
src/: agent_analyst.py  agent_reporter.py  graph.py  handoff_contract.py  observability.py  provider.py  resilience.py  success_metric.py  tool_network_data.py
tests/: test_provider_integration.py  test_resilience.py  test_success_metric.py
